# polyquantlab

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: __init__.py  auth.py  backtest_semaphore.py  job_store.py  main.py  paper_db.py  rate_limiter.py  routes_internal.py  routes_paper.py  routes_stats.py  tiers.py
backtest/: __init__.py  arb_engine.py  conditions.py  data_loader.py  engine.py  slippage.py  strategies.py  sweep.py  types.py
collector/: __init__.py  binance_trades_ws.py  binance_ws.py  bybit_ws.py  chainlink_oracle.py  config.py  db.py  discovery.py  health.py  logging_setup.py  main.py  polymarket_ws.py  reclassify.py  resolution_sync.py
db/: clickhouse_init.sql  postgres_init.sql
db/migrations/: 001_candles.sql  002_binance_trades.sql  003_paper_trading.sql  004_paper_positions_underlying.sql  005_paper_baseline.sql  006_arb_audit_log.sql  007_arb_audit_logical.sql  008_arb_audit_endgame.sql
deploy/: 01_bootstrap.sh  02_sync.sh  03_start.sh  04_install_services.sh  05_install_worker.sh  06_install_paper_trader.sh  README.md
web/: .env.example  config.ts  package-lock.json  package.json
web/app/: globals.css  page.tsx
web/components/: AnimatedCounter.tsx  ApiKeysClient.tsx  ArbDashboard.tsx  ArbVerification.tsx  BacktestForm.tsx  BacktestResult.tsx  ButtonCheckout.tsx  CalibrationView.tsx  CoinIcon.tsx  DashboardShell.tsx  ExportButtons.tsx  LayoutClient.tsx  LiveTerminal.tsx  MarketDetail.tsx  MarketsTable.tsx  NewPaperStrategyForm.tsx  (+10 more)
worker/: __init__.py  arb_tracker.py  backtest_worker.py  paper_trader.py
(+48 files in other folders)
