[project]
name = "polymarket-crypto-backtest"
version = "0.0.1"
description = "PolyBackTest clone — Polymarket BTC/ETH/SOL Up/Down data collector + backtest API"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
    "aiohttp>=3.10.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "clickhouse-connect>=0.8.0",
    "asyncpg>=0.30.0",
    "redis>=5.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "orjson>=3.10.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "slowapi>=0.1.9",
    "stripe>=11.0.0",
    # ARQ: async Redis queue for backtest jobs.
    # Picked over Celery because (a) we're already 100% asyncio, and
    # ARQ workers ARE coroutines that share the connection pool with
    # FastAPI rather than Celery's process-based model; (b) ARQ has a
    # ~500-LoC core and is auditable end-to-end vs Celery's 50k LoC.
    "arq>=0.26.0",
]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "PL"]
ignore = ["PLR0913"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["collector", "backtest", "api"]
